--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 libvirt_pool_dir: "/var/lib/libvirt/images"
+libvirt_template_dir: "/srv/vmtemplates"
 vm_root_pass: "123456"
 ssh_key: "/path/to/ssh-pub-key"
 
